logs/fluid.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fluid'...
Compiling './lib/python3.5/site-packages/fluid/DataSet.py'...
***   File "./lib/python3.5/site-packages/fluid/DataSet.py", line 67
    print "Hey ho!"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fluid/atmosphere'...
Compiling './lib/python3.5/site-packages/fluid/coards.py'...
***   File "./lib/python3.5/site-packages/fluid/coards.py", line 107
    raise Exception, 'Invalid date origin: %s' % origin
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fluid/common'...
Listing './lib/python3.5/site-packages/fluid/interaction'...
Compiling './lib/python3.5/site-packages/fluid/interaction/heat_flux.py'...
***   File "./lib/python3.5/site-packages/fluid/interaction/heat_flux.py", line 116
    print "Function short_wave_clear_sky incomplete!!! Lat out of range."
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fluid/interaction/others.py'...
***   File "./lib/python3.5/site-packages/fluid/interaction/others.py", line 101
    print "Epa!!!"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/fluid/io.py'...
***   File "./lib/python3.5/site-packages/fluid/io.py", line 46
    raise UnknownTypeError, "I don't know how to open %s." % filename
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fluid/magic.py'...
***   File "./lib/python3.5/site-packages/fluid/magic.py", line 77
    print 'Passing simple array to sum_one...'
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fluid/ocean'...
Compiling './lib/python3.5/site-packages/fluid/ocean/estuary.py'...
***   File "./lib/python3.5/site-packages/fluid/ocean/estuary.py", line 12
    """
     ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xfa in position 0: invalid start byte

Compiling './lib/python3.5/site-packages/fluid/ocean/rings.py'...
***   File "./lib/python3.5/site-packages/fluid/ocean/rings.py", line 155
    print "Center velocities (start)",u_c,v_c
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fluid/test.py'...
***   File "./lib/python3.5/site-packages/fluid/test.py", line 14
    print dir(Atm)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fluid-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
